--- a/public/less/deskstop.less
+++ b/public/less/deskstop.less
@@ -936,3 +936,6 @@ select::-ms-expand {
   visibility: hidden;
   transition: visibility 0s 0.5s, opacity 0.5s linear;
 }
+.hide-floor-group{
+  opacity:0 !important;
+}
